--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="col-lg text-center my-5">
       <h1 class="display-3 text-white my-3">RÚT TIỀN THẺ TÍN DỤNG Ở GÒ VẤP</h1>
       <p class="text-white mb-4 pb-2" style="font-size: 30px">Với bề dày kinh nghiệm hơn mười năm trong lĩnh vực tài chính.</p> <br>
-      <a href="projects.html" class="btn btn-primary py-sm-3 px-sm-5 me-3" style="font-size: 50px">LIÊN LẠC NGAY CHO CHÚNG TÔI <br> 036.55555.83</a>
+      <a href="#" class="btn btn-primary py-sm-3 px-sm-5 me-3" style="font-size: 50px">LIÊN LẠC NGAY CHO CHÚNG TÔI <br> 036.55555.83</a>
       </div>
   </div>
   </div>
