--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>RÚT TIỀN THẺ TÍN DỤNG</title>
+    <title>RÚT TIỀN THẺ TÍN DỤNG Ở GÒ VẤP</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link href="https://fonts.googleapis.com/css2?family=Redressed&display=swap" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
 
@@ -32,16 +33,17 @@
           <a class="nav-link" href="projects.html">Projects</a>
         </li> -->
         <li class="nav-item">
-          <a class="nav-link" href="#contact">Contact</a>
+          <a class="nav-link" href="https://zalo.me/0365555583">Contact</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#"><h3><i class="bi bi-facebook"></i></h3></a>
+          <a class="nav-link" href="https://www.facebook.com/profile.php?id=100084499284004&mibextid=LQQJ4d"><h3><i class="bi bi-facebook"></i></h3></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#"><h3><i class="bi bi-whatsapp"></i></h3></a>
+          <a class="nav-link" href="https://zalo.me/0365555583"><h3><i class="bi bi-whatsapp"></i></h3></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#"><h3><i class="bi bi-envelope"></i></h3></a>
+          <!-- <a class="nav-link" href="#"><h3><i class="bi bi-envelope"></i></h3></a> -->
+          <a class="nav-link" href="https://t.me/Baoanh38"><h3><i class="fa fa-telegram"></i></h3></a>
         </li>
       </ul>
     </div>
@@ -53,7 +55,7 @@
     <div class="col-lg text-center my-5">
       <h1 class="display-3 text-white my-3">RÚT TIỀN THẺ TÍN DỤNG Ở GÒ VẤP</h1>
       <p class="text-white mb-4 pb-2" style="font-size: 30px">Với bề dày kinh nghiệm hơn mười năm trong lĩnh vực tài chính.</p> <br>
-      <a href="#" class="btn btn-primary py-sm-3 px-sm-5 me-3" style="font-size: 50px">LIÊN LẠC NGAY CHO CHÚNG TÔI <br> 036.55555.83</a>
+      <a href="https://zalo.me/0365555583" class="btn btn-primary py-sm-3 px-sm-5 me-3" style="font-size: 50px">LIÊN LẠC NGAY CHO CHÚNG TÔI <br> 036.55555.83</a>
       </div>
   </div>
   </div>
